Fix blog list on mobile.

--- a/css/blog.css
+++ b/css/blog.css
@@ -404,8 +404,8 @@ li,
   #bloglist .post .title {
     font-size: 30px;
     line-height: 30px;
-    padding-left: 30px;
-    padding-bottom: 20px;
+    margin-left: 30px;
+    margin-bottom: 20px;
   }
   #geomap,
   #moneysmap,
@@ -474,8 +474,8 @@ li,
   #bloglist .post .title {
     font-size: 20px;
     line-height: 20px;
-    padding-left: 10px;
-    padding-bottom: 10px;
+    margin-left: 10px;
+    margin-bottom: 10px;
   }
   #bloglist .post .background-title .date {
     font-size: 14px;
